Fix active background in dark mode

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -21,5 +21,6 @@
     --page-bg: #222;
     --border-color: #333;
     --shadow-color: rgba(0, 0, 0, 0.2);
+    --active-link-background-color: #444;
   }
 }
